<resources>
    <string name="app_name">YouFind</string>
    <string name="config">Configurações</string>
    <string name="about">Sobre</string>
    <string name="profile">Perfil</string>
    <string name="login_title">Entrar</string>
    <string name="signup_title">Cadastrar-se</string>
    <string name="splash_welcome_txt">A maneira mais fácil de\nencontrar seu item perdido.</string>
    <string name="login_welcome_txt">Olá !\nBem-Vindo de Volta!</string>
    <string name="signup_welcome_txt">Olá !\nSeja Bem-Vindo!</string>
    <string name="login_btn_label">Entrar</string>
    <string name="signup_btn_label">Cadastrar-se</string>
    <string name="login_label">" ENTRAR"</string>
    <string name="signup_label">" Cadastrar-se"</string>
    <string name="login_with_google">ENTRAR COM O GOOGLE</string>
    <string name="get_started_btn_label">Começar!</string>
    <string name="email_address_hint">E-mail</string>
    <string name="full_name_hint">Nome Completo</string>
    <string name="password_hint">Senha</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="no_account">Não tem conta ainda?</string>
    <string name="have_account">Você tem uma conta?</string>
    <string name="divider_or">OU</string>
    <string name="recovery_password">Recuperar senha!</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="backButton">BackButton</string>
    <string name="emailFillHint">E-mail</string>
    <string name="nameFillHint">Nome</string>
    <string name="textRecoveryPassword">Clicando em recuperar senha, você estará recebendo um e-mail para colocar sua nova senha.</string>
    <string name="addPhoto">Adicione uma Foto!</string>
    <string name="homeMenu">Início</string>
    <string name="foundMenu">Achado</string>
    <string name="lostMenu">Perdido</string>
    <string name="finishMenu">Finalizado</string>
    <string name="profileMenu">Perfil</string>
    <string name="enableDarkMode">Ativar Modo Escuro: </string>
    <string name="darkMode">Modo Escuro</string>
    <string name="changeLang">Trocar Linguagem: </string>
    <string name="english">Inglês </string>
    <string name="portuguese">Português </string>
    <string name="termsTitle">YouFind</string>
    <string name="termsDescription">Estes termos de uso regem os seus direitos e obrigações em relação ao uso de software do YouFind e de seus serviços na internet ou nos meios de comunicação celular.
    Estes termos constituem um acordo vinculativo entre YouFind, o titular de todos os direitos sobre serviço e você, portanto é recomendável que você leia atentamente estas condições e ao utilizar o
    aplicativo YouFind você indica suas concordâncias com estes termos, politica de privacidade todos os quais são integrantes destas condições. Se você não concorda com estes termos ou qualquer de suas partes,
    então você deve abster-se de utilizar o serviço / aplicativo / software.</string>
    <string name="termsTitle2">Pontos Importantes</string>
    <string name="termsDescription2">As informações fornecidas pelo serviço tem origem de outros usuários do serviço. Tal informação é intrinsecamente volátil e pode ser imprecisa, incompleta ou desatualizada. YouFind não fornece
    quaisquer garantias e credibilidade ou confiabilidade de tais informações. </string>
    <string name="termsTitle3">Conexão com a Internet</string>
    <string name="termsDescription3">A Conexão à internet é necessária para usar o serviço e quaisquer encargos associados incorridas pelo seu uso do serviço, são de sua responsabilidade e exclusiva e feitas as suas custas.
    Transmitir e receber atualização em tempo real requer uma conexão ou linha (4G, 3G, WI-FI) entre o seu aparelho celular e da internet. As despesas de tal conexão são como prescrito pelo acordo entre
    você e seu provedor de serviços de comunicação (como a sua operadora de celular) e de acordo com seus termos aplicáveis de pagamento.</string>
    <string name="termsTitle4">Conteúdo do Usuário</string>
    <string name="termsDescription4">Nós não possuímos nenhum dado, informação ou material ("Conteúdo") que você enviar no Aplicativo Móvel durante o uso do Serviço. Você terá a responsabilidade exclusiva
        pela exatidão, qualidade, integridade, legalidade, confiabilidade, adequação e propriedade intelectual ou direito de uso de todo o conteúdo enviado. Podemos, mas não temos obrigação de monitorar e
        analisar o Conteúdo no Aplicativo para Dispositivos Móveis enviado ou criado usando nossos Serviços por você. A menos que especificamente permitido por você, seu uso do Aplicativo Móvel não nos concede
        a licença para usar, reproduzir, adaptar, modificar, publicar ou distribuir o Conteúdo criado por você ou armazenado em sua conta de usuário para fins comerciais, de marketing ou similares. Mas você
        nos concede permissão para acessar, copiar, distribuir, armazenar, transmitir, reformatar, exibir e executar o Conteúdo de sua conta de usuário somente conforme necessário para o propósito de fornecer
        os Serviços para você. Sem limitar nenhuma dessas representações ou garantias, temos o direito, embora não a obrigação, de, a nosso exclusivo critério, recusar ou remover qualquer Conteúdo que,
        em nossa opinião, viole qualquer uma de nossas políticas ou seja de alguma forma prejudicial. ou censurável.</string>
    <string name="termsTitle5">Backups</string>
    <string name="termsDescription5">Realizamos backups regulares do conteúdo e faremos o melhor possível para garantir a integridade e precisão desses backups. No caso de falha de hardware ou perda de dados,
        restauraremos os backups automaticamente para minimizar o impacto e o tempo de inatividade.</string>
    <string name="termsTitle6">Aplicativos Móveis de Terceiros</string>
    <string name="termsDescription6">Embora este Aplicativo para Dispositivos Móveis possa vincular-se a outros aplicativos para celular, não estamos, direta ou indiretamente, implicando qualquer aprovação,
        associação, patrocínio, endosso ou afiliação com qualquer aplicativo para dispositivos móveis vinculado, a menos que especificamente indicado aqui. Alguns dos links no aplicativo móvel podem ser
        "links afiliados". Isso significa que, se você clicar no link e comprar um item, o Mobile Application Developer receberá uma comissão de afiliado. Nós não somos responsáveis ​​por examinar ou avaliar,
        e não garantimos as ofertas de quaisquer negócios ou indivíduos ou o conteúdo de suas aplicações móveis. Não assumimos qualquer responsabilidade pelas ações, produtos, serviços e conteúdo de terceiros.
        Você deve analisar cuidadosamente as declarações jurídicas e outras condições de uso de qualquer aplicativo móvel acessado por meio de um link deste Aplicativo para dispositivos móveis.
        Sua vinculação a qualquer outro aplicativo móvel fora do site é de sua responsabilidade.</string>
    <string name="termsTitle7">Direito de propriedade intelectual</string>
    <string name="termsDescription7">Este Contrato não transfere para você nenhuma propriedade intelectual de propriedade da Mobile Application Developer ou de terceiros, e todos os
        direitos, títulos e interesses de e para essa propriedade permanecerão (como entre as partes) exclusivamente com o Mobile Application Developer. Todas as marcas registradas, marcas de serviço, gráficos
        e logotipos usados ​​em conexão com nossos Aplicativos ou Serviços Móveis são marcas comerciais ou marcas registradas de licenciadores do Mobile Application Developer ou do Mobile Application Developer.
        Outras marcas comerciais, marcas de serviço, gráficos e logotipos usados ​​em conexão com nossos Aplicativos ou Serviços Móveis podem ser marcas registradas de terceiros.O uso que você faz dos nossos
        aplicativos e serviços móveis não lhe concede nenhum direito ou licença para reproduzir ou usar qualquer desenvolvedor de aplicativos móveis ou marcas registradas de terceiros.</string>
    <string name="termsTitle8">Limitação de responsabilidade</string>
    <string name="termsDescription8">Em toda a extensão permitida pela lei aplicável, em nenhum caso a Mobile Application Developer, suas afiliadas, executivos, diretores, funcionários, agentes, fornecedores
        ou licenciadores serão responsáveis ​​perante qualquer pessoa por (a): qualquer ação indireta, incidental, especial, punitiva, cobrir ou danos consequenciais (incluindo, sem limitação, danos por perda de
        lucros, receita, vendas, boa vontade, uso ou conteúdo, impacto nos negócios, interrupção de negócios, perda de economias antecipadas, perda de oportunidade de negócios), sob qualquer teoria de
        responsabilidade , incluindo, sem limitação, contrato, responsabilidade civil, garantia, violação de dever estatutário, negligência ou de outra forma, mesmo que a Mobile Application Developer tenha
        sido avisada sobre a possibilidade de tais danos ou possa ter previsto tais danos. Na medida máxima permitida pela lei aplicável, a responsabilidade agregada da Mobile Application Developer e de suas
        afiliadas, executivos, funcionários, agentes, fornecedores e licenciadores, relacionada aos serviços será limitada a um valor maior de um dólar ou qualquer valor efetivamente pago em dinheiro por você
        ao Mobile Application Developer pelo um mês antes do primeiro evento ou ocorrência que deu origem a tal responsabilidade. As limitações e exclusões também se aplicam se este remédio não compensá-lo
        totalmente por quaisquer perdas ou falhas do seu propósito essencial. relativo aos serviços será limitado a uma quantidade maior de um dólar ou quaisquer valores efectivamente pagos em dinheiro por
        você ao Mobile Application Developer para o período de um mês antes antes do primeiro evento ou ocorrência dando origem a essa responsabilidade. As limitações e exclusões também se aplicam se este
        remédio não compensá-lo totalmente por quaisquer perdas ou falhas do seu propósito essencial. relativo aos serviços será limitado a uma quantidade maior de um dólar ou quaisquer valores efectivamente
        pagos em dinheiro por você ao Mobile Application Developer para o período de um mês antes antes do primeiro evento ou ocorrência dando origem a essa responsabilidade. As limitações e exclusões também
        se aplicam se este remédio não compensá-lo totalmente por quaisquer perdas ou falhas do seu propósito essencial.</string>
    <string name="termsTitle9">Alterações</string>
    <string name="termsDescription9">Reservamo-nos o direito de modificar este Contrato ou suas políticas relacionadas ao Aplicativo ou Serviços Móveis a qualquer momento, em vigor após a publicação de
        uma versão atualizada deste Contrato no Aplicativo para Dispositivos Móveis. Quando o fizermos, enviaremos um e-mail para notificá-lo. O uso contínuo do Aplicativo para dispositivos móveis após tais
        alterações constituirá seu consentimento para tais alterações. A política foi criada com o WebsitePolicies .</string>
    <string name="termsTitle10">Aceitação destes termos</string>
    <string name="termsDescription10">Você reconhece que leu este Acordo e concorda com todos os seus termos e condições. Ao usar o aplicativo móvel ou seus serviços, você concorda em ficar vinculado
        a este contrato. Se você não concordar em cumprir os termos deste Contrato, você não está autorizado a usar ou acessar o Aplicativo para Dispositivos Móveis e seus Serviços.</string>
</resources>