<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_action_found"
        android:icon="@drawable/found_item"
        android:title="@string/foundMenu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/bottom_action_lost"
        android:icon="@drawable/lost_item"
        android:title="@string/lostMenu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/bottom_action_home"
        android:icon="@drawable/home2"
        android:title="@string/homeMenu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/bottom_action_complete"
        android:icon="@drawable/icon_return3"
        android:title="@string/finishMenu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/bottom_action_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profileMenu"
        app:showAsAction="never"/>

</menu>