<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/settingsBackground"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/settingsCard"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center_vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:text="@string/enableDarkMode"/>
            
            <Switch
                android:id="@+id/myswitch"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:theme="@style/SCBSwitch"
                android:text="@string/darkMode"/>
            
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="@color/settingsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:text="@string/changeLang"/>

            <Button
                android:id="@+id/changeMyLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/SolidButtonStyle"
                android:text="@string/english"/>

            <Button
                android:id="@+id/changeMyLang2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/SolidButtonStyle"
                android:text="@string/portuguese"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>